--- a/style.css
+++ b/style.css
@@ -1,11 +1,8 @@
 /* Paleta de Cores */
-#color-palette {
-  display: table;
-}
-
 .color {
-  display: table-cell;
-  border: 1px solid black;
+  display: inline-block;
+  margin-inline: 1px ;
+  border: solid 1px black;
   width: 40px;
   height: 40px;
 }
@@ -17,12 +14,13 @@
 }
 
 .pixel {
-  display: table-cell;
-  border: 1px solid black;
-  width: 40px;
-  height: 40px;
+  border: solid 1px black;
+  width: 41px;
+  height: 41px;
+  background-color: white;
 }
 
+/* botão  de limpar */
 #clear-board {
   margin-top: 25px;
 }
